public static class Fields
{
    public static class Tags
    {
        public static string LineObject { get { return "LineObject"; } }

        public static string SplitLine { get { return "SplitLine"; } }
    }

    public static class GameObjects
    {
        public static string Eraser { get { return "Eraser"; } }

        public static string EraserSprite { get { return "Eraser_Sprite"; } }

        public static string EraserCursor { get { return "Eraser_Cursor"; } }

        public static string FpsCounter { get { return "Fps_Counter"; } }

        public static string Game { get { return "Game"; } }

        public static string HUD { get { return "HUD"; } }

        public static string LineObject { get { return "LineObject"; } }

        public static string MainCamera { get { return "MainCamera"; } }

        public static string Platform { get { return "Platform"; } }

        public static string Player { get { return "Player"; } }

        public static string PlayerLines { get { return "PlayerLines"; } }

        public static string PencilSprite { get { return "Pencil_Sprite"; } }
    }

    public static class Animator
    {
        public static string Airborne { get { return "Airborne"; } }

        public static string Moving { get { return "Moving"; } }
		
        public static string Speed { get { return "Speed"; } }
    }

    public static class AssetPaths
    {
        public static string DrawCursor { get { return "Assets/Resources/Artwork/UI/Draw_Cursor.png"; } }

        public static string EraseCursorSmall { get { return "Assets/Resources/Artwork/UI/Erase_Cursor_Small.png"; } }
    }
}
